--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "typescript": "^3.9.7"
   }
 }
